--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
               ><span class="label">Github</span></a
             >
           </li>
-          <!-- <li>
-            <a href="#" class="icon solid fa-envelope"
+          <li>
+            <a href="mailto:azhanmd8@gmail.com" class="icon solid fa-envelope"
               ><span class="label">Email</span></a
             >
-          </li> -->
+          </li>
         </ul>
       </footer>
     </section>
@@ -222,57 +222,6 @@
                 </div>
               </article>
             </div>
-          </div>
-        </section>
-
-        <!-- Four -->
-        <section id="four">
-          <div class="container">
-            <h3>Contact</h3>
-            
-            <form method="post" action="#">
-              <div class="row gtr-uniform">
-                <div class="col-6 col-12-xsmall">
-                  <input type="text" name="name" id="name" placeholder="Name" />
-                </div>
-                <div class="col-6 col-12-xsmall">
-                  <input
-                    type="email"
-                    name="email"
-                    id="email"
-                    placeholder="Email"
-                  />
-                </div>
-                <div class="col-12">
-                  <input
-                    type="text"
-                    name="subject"
-                    id="subject"
-                    placeholder="Subject"
-                  />
-                </div>
-                <div class="col-12">
-                  <textarea
-                    name="message"
-                    id="message"
-                    placeholder="Message"
-                    rows="6"
-                  ></textarea>
-                </div>
-                <div class="col-12">
-                  <ul class="actions">
-                    <li>
-                      <input
-                        type="submit"
-                        class="primary"
-                        value="Send Message"
-                      />
-                    </li>
-                    <li><input type="reset" value="Reset Form" /></li>
-                  </ul>
-                </div>
-              </div>
-            </form>
           </div>
         </section>
     </div>
