--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
             <ul class="feature-icons">
               <li class="icon solid fa-bolt">Quick Learning</li>
               <li class="icon solid fa-code">Writing Code</li>
-              <li class="icon solid fa-book">Problem Solving</li>
-              <li class="icon solid fa-cubes">Attention to Detail</li>
+              <li class="icon solid fa-book">Attention to Detail</li>
+              <li class="icon solid fa-cubes">Problem Solving</li>
               <li class="icon solid fa-coffee">Efficient Time Management</li>
               <li class="icon solid fa-users">Effective Communication</li>
             </ul>
